--- a/CSS/output.css
+++ b/CSS/output.css
@@ -416,8 +416,17 @@
   .h-32 {
     height: calc(var(--spacing) * 32);
   }
+  .h-60 {
+    height: calc(var(--spacing) * 60);
+  }
   .h-\[1px\] {
     height: 1px;
+  }
+  .h-\[50px\] {
+    height: 50px;
+  }
+  .h-\[50vh\] {
+    height: 50vh;
   }
   .h-\[59px\] {
     height: 59px;
@@ -439,6 +448,9 @@
   }
   .h-\[90vh\] {
     height: 90vh;
+  }
+  .h-\[100\] {
+    height: 100;
   }
   .h-\[100vh\] {
     height: 100vh;
@@ -974,6 +986,9 @@
   .bg-\[\#001A57\] {
     background-color: #001A57;
   }
+  .bg-\[\#001138\] {
+    background-color: #001138;
+  }
   .bg-\[\#001648\] {
     background-color: #001648;
   }
@@ -1122,6 +1137,9 @@
   .p-3 {
     padding: calc(var(--spacing) * 3);
   }
+  .p-5 {
+    padding: calc(var(--spacing) * 5);
+  }
   .p-6 {
     padding: calc(var(--spacing) * 6);
   }
@@ -1172,6 +1190,9 @@
   }
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
+  }
+  .py-5 {
+    padding-block: calc(var(--spacing) * 5);
   }
   .py-6 {
     padding-block: calc(var(--spacing) * 6);
@@ -1392,9 +1413,25 @@
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
+  .duration-75 {
+    --tw-duration: 75ms;
+    transition-duration: 75ms;
+  }
+  .duration-150 {
+    --tw-duration: 150ms;
+    transition-duration: 150ms;
+  }
   .duration-300 {
     --tw-duration: 300ms;
     transition-duration: 300ms;
+  }
+  .duration-700 {
+    --tw-duration: 700ms;
+    transition-duration: 700ms;
+  }
+  .duration-1000 {
+    --tw-duration: 1000ms;
+    transition-duration: 1000ms;
   }
   .outline-none {
     --tw-outline-style: none;
@@ -1605,9 +1642,19 @@
       justify-content: space-between;
     }
   }
+  .md\:justify-start {
+    @media (width >= 48rem) {
+      justify-content: flex-start;
+    }
+  }
   .md\:gap-0 {
     @media (width >= 48rem) {
       gap: calc(var(--spacing) * 0);
+    }
+  }
+  .md\:gap-5 {
+    @media (width >= 48rem) {
+      gap: calc(var(--spacing) * 5);
     }
   }
   .md\:gap-40 {
@@ -1659,6 +1706,11 @@
   .md\:p-\[48px\] {
     @media (width >= 48rem) {
       padding: 48px;
+    }
+  }
+  .md\:px-10 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 10);
     }
   }
   .md\:px-16 {
